trying to debug post route with assistance from BCS

--- a/package.json
+++ b/package.json
@@ -2,5 +2,23 @@
   "dependencies": {
     "express": "^4.18.1",
     "mongoose": "^6.4.0"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "social-networking",
+  "description": "",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/maggiejoe/social-networking.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/maggiejoe/social-networking/issues"
+  },
+  "homepage": "https://github.com/maggiejoe/social-networking#readme"
 }
